# linear-filter

./: CMakeLists.txt  README.md
include/: Builder.hpp  HelperFunctions.hpp  LinearSystem.hpp
python/: __init__.py  python_bindings.cpp  setup.py
src/: Builder.cpp  HelperFunctions.cpp  LinearSystem.cpp  python_bindings.cpp
test/: gtest_LinearSystem.cpp  test_LinearSystem.cpp  test_LinearSystem.py
